--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,2 +1,5 @@
-<h1>Users#new</h1>
-<p>Find me in app/views/users/new.html.erb</p>
+<%= form_for @user do |f| %>
+    <p><%= f.label "First Name" %><%= f.text_field :name %></p>
+    <p><%= f.label "Email" %><%= f.text_field :email %></p>
+    <p><%= f.submit "Create Account" %>
+<% end %>
