--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,4 @@
 <h1><%= @greeting %></h1>
-<%= link_to "Sign Up", new_user_path %>
+<% if !logged_in? %>
+    <%= link_to "Sign Up", new_user_path %>
+<% end %>
