--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -13,6 +13,16 @@
                     <li class="nav-item">
                         <%= link_to 'View Lists', lists_path, class: 'nav-link' %>
                     </li>
+                    <li class="nav-item">
+                        <%= link_to 'Sign Out', logout_path, class: 'nav-link', method: :delete %>
+                    </li>
+                <% else %>
+                    <li class="nav-item">
+                        <%= link_to 'Sign Up', new_user_path, class: 'nav-link' %>
+                    </li>
+                    <li class="nav-item">
+                        <%= link_to 'Log In', login_path, class: 'nav-link' %>
+                    </li>
                 <% end %>
             </ul>
             <form class="d-flex" role="search">
